--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     </svg>
   </div>
 
-  <lib-acheron (emitVersion)="updateVersion($event)"></lib-acheron>
+  <lib-acheron (emitVersion)="updateVersion($event)" [initWorkflow]="2"></lib-acheron>
 
 
 </div>
