--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,19 +21,15 @@
       <path id="Path_40" data-name="Path 40" d="M644.6,141S143.02,215.537,147.049,870.207s342.774,201.755,342.774,201.755S404.659,847.213,388.815,762.2c-27.116-145.51-11.551-384.124,271.9-609.1C671.15,139.365,644.6,141,644.6,141Z" transform="translate(-147.025 -140.939)" fill="#f5f5f5"/>
     </svg>
   </div>
-
-  <lib-acheron (emitVersion)="updateVersion($event)" (emitContent)="contentUpdate()" [widgetInput]="widgetInputData" [initWorkflow]="2">
-    <div contentwidget>
-      contentwidget
+  {{ widgetList | json }}
+  <lib-acheron (emitVersion)="updateVersion($event)" (emitContent)="contentUpdate($event)" [widgetInput]="widgetInputData" [initWorkflow]="2">
+    <div contentwidget_gallery *ngIf="componentInlude('gallery')">
+      contentwidget-gallery
     </div>
-    <div contentwidgetdue>
-      contentwidget2
+    <div contentwidget_profile *ngIf="componentInlude('profile')">
+      contentwidget-profile
     </div>
   </lib-acheron>
-
-  <pre>
-    {{ widgetInputData | json }}
-  </pre>
 
 
 </div>
